--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,10 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+body::-webkit-scrollbar {
+  display: none; /* Hides the scrollbar */
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
